# teagram-mini

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  install.sh
.github/workflows/: ci.yml
brain/: README.md  pyproject.toml
brain/teagram_brain/: __init__.py  captions.py  endpoint_debug.py  endpointing.py  engine_tts.py  followup_gate.py  gateway_serializer.py  gateway_server.py  memory_recall.py  openclaw_client.py  persona.py  services.py  stt.py  thinking_sound.py  tools.py  transcript_ledger.py  tts_text.py
brain/teagram_mini_brain/: __init__.py  captions.py  consult_bridge.py  endpoint_debug.py  endpointing.py  engine_tts.py  followup_gate.py  gateway_serializer.py  gateway_server.py  heard_context.py  memory_hygiene.py  memory_recall.py  openclaw_client.py  persona.py  services.py  stt.py  thinking_sound.py  tools.py  transcript_ledger.py  turn_timing.py
brain/tests/: README.md  test_captions.py  test_engine_text_stream.py  test_heard_truncate.py  test_ledger_words.py  test_memory_recall.py  test_remember_tool.py  test_suite.py  test_tts_speech_hold.py  test_user_transcript.py
bridge/discord/: README.md  index.js  package.json
cli/: teagram  teagram-mini
docs/: ARCHITECTURE.md  CONFIG.md  FAQ.md  INSTALL.md
manifest/: beta.json  stable.json
plugin/: README.md  index.js  openclaw.plugin.json  package.json  provider.js
plugin/test/: bridge_harness.mjs
systemd/: caddy.service.in  teagram-brain.service.in  teagram-discord-bridge.service.in  teagram-engine.service.in  teagram-mini-brain.service.in  teagram-mini-discord-bridge.service.in  teagram-mini-engine.service.in  teagram-mini-sandbox-recover.service.in  teagram-sandbox-recover.service.in
